add :style and @click

--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,20 @@
 :root {
     /* --color-:;  */
 }
+
 .ms_debug {
     border: 1px solid red;
 }
+
 /* *****GENERAL***** */
 html {
     scroll-behavior: smooth;
 }
+
 body {
     /* font-family: "Nome del Font", sans-serif;  */
 }
+
 a {
     color: var(--color-);
     text-decoration: none;
@@ -37,14 +41,16 @@ a {
     display: inline-block;
     padding: 6px 12px;
 }
+
 .ms_screen {
     height: 100vh;
-    background-color:maroon;
+    background-color: green;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
 }
+
 .ms_card {
     height: 80vh !important;
     width: 80%;
@@ -53,6 +59,7 @@ a {
     align-items: center;
 
 }
+
 .ms_box {
     border: 1px solid black;
     display: flex;
@@ -60,6 +67,10 @@ a {
     align-items: center;
     flex-wrap: wrap;
     cursor: crosshair;
+}
+
+.ms_pointer {
+    cursor: pointer;
 }
 
 /* flex utility  */
